--- a/css/style.css
+++ b/css/style.css
@@ -1,112 +1,138 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Sans+Narrow');
+
 /* css varibles */
 :root {
-    --primary-color: #ff061f73;
-    --primary-color-hover:#ff0019;
-    --secondary-color:#0062ff73;
-    --secondary-color-hover:#0062ff;
-    --light-color:#f4f4f4;
+  --primary-color: #ff061f73;
+  --primary-color-hover: #ff0019;
+  --secondary-color: #0062ff73;
+  --secondary-color-hover: #0062ff;
+  --light-color: #f4f4f4;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-    font-family: 'PT Sans', sans-serif;
-    background-color: #252529;
-    color: #fff;
-    line-height: 1;
-    min-width: 50%;
-    font-size: 1em;
-  }
-  
-a {
-    text-decoration: none;
-    color: #ccc;
+html {
+  scroll-behavior: smooth;
 }
+
+body {
+  font-family: 'PT Sans', sans-serif;
+  background-color: #252529;
+  color: #fff;
+  line-height: 1;
+  min-width: 50%;
+  max-width: 100%;
+  font-size: 1em;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: #ccc;
+}
+
 span {
   color: #ccc
 }
-  img {
-     width: 100%;
-     height: auto;
-     object-fit: contain;
-     aspect-ratio: 1/1;
-  }
 
-.imgmusic {
-    width: 50vw;
-    height: 40vh;
-    float: right;
-  }
+img {
+  display: block;
+  max-width: 100%;
+  min-width: 60%;
+  height: auto;
+  object-fit: contain;
+}
 
-  /* section */
-
+/* section */
 .section-head {
-    font-size: 2.5rem;
-    padding: 0.9rem;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+  font-size: 2.5rem;
+  padding: 0.9rem;
+  display: flex;
+  gap: .6rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .section h3 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
-  /* showcase */
+/* showcase */
 #showcase {
-    background: url('../images/showcase1.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100%;
-    height: 120vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+  background: url('../images/showcase1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  width: 100%;
+  height: 120vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 
 #showcase h1 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 
 #showcase h2 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 /* Music */
 #music {
-    background: url('../images/musicbg.png');
-    width: 100%;
-    height:100vh;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: contain;
+  background: url('../images/musicbg.png');
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+}
+
+.music-content {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+}
+
+.music-img {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.music-img img {
+  width: 500px;
+  padding: .1rem;
 }
 
 /* video */
 #video {
+  display: block;
   width: 100%;
-  height:100vh;
+  height: 100vh;
   position: relative;
   overflow: hidden;
 }
+
 .banner {
-  padding-bottom: 2rem;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+  display: grid;
+  gap: 1rem;
+  width: 100%;
 }
 
 .banner video {
@@ -119,9 +145,14 @@ span {
 
 .content {
   position: absolute;
+  z-index: 2;
   top: 100px;
-  margin: 0 6rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
 }
 
 .content p {
@@ -133,39 +164,87 @@ span {
 #entertainment {
   background: url('../images/enterbg.jpg');
   width: 100%;
-  height:100vh;
+  height: 100vh;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: left;
-  background-size: contain;
+  background-position: center;
+  background-size: cover;
 }
 
-#entertainment h1 {
-  font-size: 4rem;
-  margin-bottom: 0;
-}
-
-
-#entertainment h2 {
+.ent-content h2 {
   font-size: 2rem;
-  margin-bottom: 0;
+  text-align: center;
+}
+
+
+.ent-content h3 {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.ent-content img {
+  width: 250px;
+  height: 250px;
+  padding: .1rem;
+}
+
+
+.ent-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 /* applications */
 #app {
-  background:url('../images/showcase2.jpg');
+  background: url('../images/showcase2.jpg');
   width: 100%;
-  height:120vh;
+  height: auto;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
   background-size: cover;
 }
 
+.app-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2rem;
+}
+
+.app-content img {
+  height: 100%;
+}
+
+
+/* gift card */
 #gift-card {
   background: var(--light-color);
   color: #555;
   width: 100%;
-  height:120vh;
+  height: 100vh;
+}
+
+.gift-card {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.gift-redeem {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 
@@ -181,7 +260,7 @@ footer .footer-cols {
 
 footer .footer-cols ul li:first-child {
   padding-bottom: 0.5rem;
-  border-bottom: #444 solid 1px;
+  border-bottom: 1px solid #444;
   margin-bottom: 1rem;
   list-style: none;
 }
@@ -189,14 +268,14 @@ footer .footer-cols ul li:first-child {
 footer .footer-bottom {
   background: #333;
   padding-bottom: 0.5rem;
-  border-bottom: #444 solid 1px;
+  border-bottom: 1px solid #444;
   margin-bottom: 1rem;
 }
+
 /* utility classes */
 .container {
-    max-width: 74rem;
-    height: 100%;
-    text-align: center;
+  max-width: 74rem;
+  height: 100%;
 }
 
 .text-center {
@@ -204,106 +283,96 @@ footer .footer-bottom {
 }
 
 .btn {
-    padding: 1rem;
-    color: #fff;
-    display: inline-block;
-    border-radius: 40px;
+  padding: 1rem;
+  color: #fff;
+  display: inline-block;
+  border-radius: 40px;
 }
 
 .btn-primary {
-    background: var(--primary-color);
+  background: var(--primary-color);
 }
 
 .btn-primary:hover {
-    background: var(--primary-color-hover);
+  background: var(--primary-color-hover);
 }
 
 .btn-secondary {
-    background: var(--secondary-color);
+  background: var(--secondary-color);
 }
 
 .btn-secondary:hover {
-    background: var(--secondary-color-hover);
+  background: var(--secondary-color-hover);
 }
 
 .lead {
-    font-size: 1.2rem;
-}
-
-.mb {
-    margin-bottom: 1.2rem;
-}
-
-.mt{
-    margin-top: 1.2rem;
+  font-size: 1.2rem;
 }
 
 .text-primary {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .text-secondary {
-    color: var(--secondary-color);
+  color: var(--secondary-color);
 }
 
 .text-light {
-    color: var(--light-color);
+  color: var(--light-color);
 }
 
 .just-right {
-    font-size: 1.3rem;
-    text-align: right;
-    margin: 0;
+  font-size: 1.3rem;
+  text-align: right;
 }
+
 .just-left {
   font-size: 1.3rem;
-    text-align: left;
-    margin: 0;
+  text-align: left;
 }
-  /* navigation */
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 40px;
-    width: 100%;
-    background-color: #333;
-    color: #eee;
-    z-index: 9;
-    font-weight: 600;
-  }
+
+/* navigation */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 40px;
+  width: 100%;
+  background-color: #333;
+  z-index: 9;
+  font-weight: 600;
+}
 
 
-  nav ul {
-    display: flex;
-    justify-content: space-evenly;
-  }
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  place-content: center;
+}
 
-  nav li{
-    list-style-type: none;
-    margin: .6rem;
-  }
- 
-  nav a {
-    text-decoration: none;
-    padding: .6rem;
-  }
+nav li {
+  list-style-type: none;
+  margin: .6rem;
+}
 
-  nav li a:hover {
-    background-color: #444;
-  }
-  nav a#openup {
-    display: none;
-  }
+nav a {
+  color: #eee;
+  text-decoration: none;
+  padding: .6rem;
+}
 
-  @media screen and (max-width: 780px) {
-    .imgmusic {
-      width: 100%;
-      height: auto;
-      float: left;
-    }
+nav li a:hover {
+  background-color: #444;
+}
 
+#openup {
+  display: none;
+}
+
+@media screen and (max-width: 48rem) {
+  header {
+    background-color: transparent;
+  }
 
   nav ul {
     display: none;
@@ -314,210 +383,46 @@ footer .footer-bottom {
     display: block;
     text-align: left;
     width: 100%;
-    text-indent: 25px;
+    text-indent: 2rem;
   }
 
   nav a:hover {
     background: #444;
   }
 
-  nav a#openup:after {
+  #openup::after {
     content: "|||";
     transform: rotate(-90deg);
     width: 30px;
     height: 30px;
     font-weight: 900;
     display: inline-block;
-    position: absolute;
-    right: 25px;
-    top: 20px;
   }
 
-  nav a#openup {
-    background-color: #252529;
+  #openup {
     display: block;
-    position: relative;
     width: 100%;
     font-weight: 900;
     font-size: x-large;
+    cursor: pointer;
   }
 
-.content {
-  position: absolute;
-  top: 100px;
-  margin: 0 3rem;
-}
-.content h3{
-  font-size: 1rem;
-}
-.banner {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-.just-right {
-  font-size: 1rem;
-  text-align: left;
-  margin: 0;
-}
-.just-left {
-font-size: 1rem;
-  text-align: right;
-  margin: 0;
-}
-
-.lead {
-  font-size: 0.9rem;
-}
-
-    #showcase {
-        height: 55vh;
-    }
-
-    #showcase .container{
-        margin-top: 10vh;
-    }
-
-    #showcase h1 {
-        font-size: 3rem;
-    }
-    #showcase h2 {
-        font-size: 1.5rem;
-    }
-
-#entertainment h2 {
-  font-size: 1.3rem;
-  margin-bottom: 0;
-}
-
-#entertainment h3 {
-  font-size: 1rem;
-  margin-bottom: 0;
-}
-    
- 
+  .gift-redeem {
+    flex-direction: column;
   }
 
-  .cf:before, .cf:after {
-    content: "";
-    display: block;
-  }
-
-  .cf:after {
-    clear: both;
-  }
-
-  .cf {
-    zoom: 1;
-  }
-
-  /* @media screen and (max-width: 580px) and (max-width: 780px) and (max-height:580) {
-    .imgmusic {
-      width: 100%;
-      height: auto;
-      float: left;
-    }
-
-.content {
-  position: absolute;
-  top: 100px;
-  margin: 0 3rem;
-}
-.content h3{
-  font-size: 1rem;
-}
-.banner {
-  margin-top: 0;
-  padding-top: 0;
 }
 
-.just-right {
-  font-size: 1rem;
-  text-align: left;
-  margin: 0;
+.cf::before,
+.cf::after {
+  content: "";
+  display: block;
 }
-.just-left {
-font-size: 1rem;
-  text-align: right;
-  margin: 0;
+
+.cf::after {
+  clear: both;
 }
-    .hide-on-small {
-        display: none;
-    }
-    #showcase {
-        height: 55vh;
-    }
 
-    #showcase .container{
-        margin-top: 10vh;
-    }
-
-    #showcase h1 {
-        font-size: 3rem;
-    }
-    #showcase h2 {
-        font-size: 1.5rem;
-    }
-    nav {
-      height: auto;
-      border-bottom: 0;
-    }
-    nav ul {
-      display: none;
-      height: auto;
-    }
-    nav li {
-      width: 100%;
-      float: left;
-      position: relative;
-    }
-    nav a {
-      text-align: left;
-      width: 100%;
-      text-indent: 25px;
-      background: #333;
-      border-bottom: 1px solid #555;
-    }
-    nav a:hover {
-      background: #444;
-    }
-    nav a#openup:after {
-      content: "|||";
-      transform: rotate(-90deg);
-      width: 30px;
-      height: 30px;
-      display: inline-block;
-      position: absolute;
-      right: 25px;
-      top: 20px;
-    }
-    
-    @media screen and (max-height:780px) {
-      #showcase {
-        height: 100vh;
-    }
-
-    #showcase .container{
-        margin-top: 10vh;
-    }
-
-    #showcase h1 {
-        font-size: 3rem;
-    }
-    #showcase h2 {
-        font-size: 1.5rem;
-    }
-    }
-
-    nav a#openup {
-      display: block;
-      background-color: #333;
-      width: 100%;
-      position: relative;
-    }
-    footer .footer-cols {
-      display: none;
-    }
-  }
-   */
-
+.cf {
+  zoom: 1;
+}
